[workspace]
members = [
    "host",
    "methods"
]
resolver = "2"

# Always optimize; otherwise tests take excessively long.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", branch = "risczero" }
ed25519-consensus = { git = "https://github.com/l2iterative/ed25519-consensus-patch0", branch = "main" }