[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.20.1", default-features = false, features = [ "std" ] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tendermint = { version = "0.34.0", default-features = false }
tendermint-light-client-verifier = { version = "0.34.0", default-features = false, features = [
    "rust-crypto",
] }
ahash = "=0.8.6"
ed25519-consensus = { version = "2.1.0",  default-features = false, features = ["std"] }

[features]
default = []

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", branch = "risczero" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }
ed25519-consensus = { git = "https://github.com/l2iterative/ed25519-consensus-patch0", branch = "main" }
